# esmfoldtools

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
build_tools/: environment.yml
esmfoldtools/: __init__.py  main.py
tests/: test_main.py
