[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esmfoldtools"
version = "0.0.1"
description = "Tools to help run ESMFold calculations."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Louie Slocombe", email = "louies@hotmail.co.uk" },
]

dependencies = [
    "numpy",
    "torch",
    "transformers",
    "pdbfixer",
    "openmm",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/LouieSlocombe/esmfoldtools"
Repository = "https://github.com/LouieSlocombe/esmfoldtools"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["esmfoldtools", "esmfoldtools.*"]

[tool.setuptools.package-data]
"esmfoldtools" = ["data/*"]
